Edited the KDC file

--- a/kerberos/kdc.conf
+++ b/kerberos/kdc.conf
@@ -16,7 +16,7 @@
     admin_server = FILE:/usr/local/var/krb5kdc/kadmin.log
 
 [dbdefaults]
-    ldap_kerberos_container_dn = cn=krbcontainer,dc=mit,dc=edu
+    ldap_kerberos_container_dn = cn=krb,dc=cipher,dc=com
 
 [dbmodules]
     openldap_ldapconf = {
@@ -29,6 +29,6 @@
             # this object needs to have read and write rights on
             # the realm container and principal subtrees
         ldap_service_password_file = /etc/kerberos/service.keyfile
-        ldap_servers = ldaps://kerberos.mit.edu
+        ldap_servers = ldaps://kerberos.cipher.com
         ldap_conns_per_server = 5
     }
