--- a/kerberos/kdc.conf
+++ b/kerberos/kdc.conf
@@ -22,10 +22,10 @@
     openldap_ldapconf = {
         db_library = kldap
         disable_last_success = true
-        ldap_kdc_dn = "cn=krbadmin,dc=mit,dc=edu"
+        ldap_kdc_dn = "cn=krbadmin,dc=cipher,dc=com"
             # this object needs to have read rights on
             # the realm container and principal subtrees
-        ldap_kadmind_dn = "cn=krbadmin,dc=mit,dc=edu"
+        ldap_kadmind_dn = "cn=krbadmin,dc=cipher,dc=com"
             # this object needs to have read and write rights on
             # the realm container and principal subtrees
         ldap_service_password_file = /etc/kerberos/service.keyfile
