message d'erreur si fail install bind9

--- a/dhcp/dhcpd.conf
+++ b/dhcp/dhcpd.conf
@@ -46,58 +46,58 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
 #adresse(s) fixe(s) pour les serveurs de la DMZ
     host web_dmz_server{
         #remplacer ethernet addresses
-        hardware ethernet 08:00:06:21:c1:a2;
+        hardware ethernet 52:54:00:07:cb:d4;
         #les fixed-address sont des adresses ip fixes, il faut configurer le dns pour gerer la resolution des noms de domaine dans le réseau
         fixed-address web.cipher.;
     }
 
     host dns_dmz_server{
         #remplacer ethernet addresses
-        hardware ethernet 08:00:06:21:c1:a2;
+        #hardware ethernet 08:00:06:21:c1:a2;
         fixed-address dnsdmz.cipher.;
     }
 
 #adresse(s) fixe(s) pour les serveurs internes
     host sgbd_server{
         #remplacer ethernet addresses
-        hardware ethernet 08:00:06:21:c1:a2;
+        hardware ethernet 52:54:00:c1:27:30;
         fixed-address sgbd.cipher.;
     }
 
     host log_server{
         #remplacer ethernet addresses
-        hardware ethernet 08:00:06:21:c1:a2;
+        hardware ethernet 52:54:00:3b:d4:78;
         fixed-address log.cipher.;
     }
 
     host file_server{
         #remplacer ethernet addresses
-        hardware ethernet 08:00:06:21:c1:a2;
+        hardware ethernet 52:54:00:60:bb:22;
         fixed-address dns.cipher.;
     }
 
     #besoin de host dns_server car servers dns configurés avec des adresses ip statiques?
     host dns_server{
         #remplacer ethernet addresses
-        hardware ethernet 08:00:06:21:c1:a2;
+        hardware ethernet 52:54:00:f6:a6:1f;
         fixed-address dns.cipher.;
     }
 
     host ldap_server{
         #remplacer ethernet addresses
-        hardware ethernet 08:00:06:21:c1:a2;
+        hardware ethernet 52:54:00:c5:a9:2f;
         fixed-address ldap.cipher.;
     }
 
     host dhcp_server{
         #remplacer ethernet addresses
-        hardware ethernet 08:00:06:21:c1:a2;
+        hardware ethernet 52:54:00:5f:71:38;
         fixed-address dhcp.cipher.;
     }
 
     host kerberos_server{
         #remplacer ethernet addresses
-        hardware ethernet 08:00:06:21:c1:a2;
+        hardware ethernet 52:54:00:94:68:aa;
         fixed-address kerberos.cipher.;
     }
 
