--- a/dhcp/dhcpd.conf
+++ b/dhcp/dhcpd.conf
@@ -5,6 +5,7 @@ max-lease-time 7200;
 #option subnet-mask 255.255.255.0;
 option domain-name "cipher.";
 #option domain-name-servers 192.168.1.6;
+ddns-update-style none;
 
 # Subnet pour les postes de travail
 subnet 192.168.2.0 netmask 255.255.255.0 {
@@ -24,7 +25,7 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
     #range 192.168.1.3 192.168.128.250;
     option routers 192.168.1.2;
     #option broadcast-address 192.168.128.254;
-    option domain-name-servers 192.168.1.6;
+    option domain-name-servers 192.168.1.6, 1.1.1.1;
     #allow members of "servers";
     #deny dynamic-bootp clients;
 }
